Fix image stretch on post overview

--- a/themes/maik-blog/assets/scss/_posts.scss
+++ b/themes/maik-blog/assets/scss/_posts.scss
@@ -47,6 +47,7 @@
         img {
           max-height: 20rem;
           margin: 0 auto;
+          object-fit: contain;
         }
       }
     }
